<resources>
    <string name="app_name">易舍</string>
    <string name="title_activity_login">登录</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend">推荐</string>
    <string name="attention">关注</string>
    <string name="search">搜索</string>
    <string name="share">分 享</string>
    <string name="transaction">交 易</string>
</resources>
