<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLogin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/login_edit_text_id"
        android:layout_width="296dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_bg_selector"
        android:ems="10"
        android:hint="学号"
        android:inputType="number"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_edit_text_pw"
        android:layout_width="296dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg_selector"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_text_id"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text_id"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_id" />


    <Button
        android:id="@+id/login_button_login"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_text_pw"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text_pw"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_pw" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/login_button_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember_password"
        android:button="@drawable/check_box_selector"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text_pw"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_pw" />

    <TextView
        android:id="@+id/login_text_forget"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_text_pw"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>